// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly HTML 1`] = `
<div
  className="details__RTE"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Bar</p>",
    }
  }
/>
`;

exports[`should render correctly nothing 1`] = `
<span
  className="details__list-value--empty"
>
  CRUD.details.noValue
</span>
`;

exports[`should render correctly number 1`] = `
<div
  className="details__text"
  dangerouslySetInnerHTML={
    Object {
      "__html": 42,
    }
  }
/>
`;

exports[`should render correctly text 1`] = `
<div
  className="details__text"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Foo",
    }
  }
/>
`;
